--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,24 +2,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "cppdbg",
+      "type": "lldb",
       "name": "CMake Debug (automatic)",
       "request": "launch",
       "program": "${command:cmake.launchTargetPath}",
       "args": [],
-      "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "gdb",
-      "miDebuggerPath": "/usr/bin/gdb",  // or lldb if you're on macOS
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
     }
   ]
 }
