--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,17 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.15)
 project(BixsBundleBash)
 
-# Use C++17
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_C_COMPILER "/usr/bin/clang" CACHE STRING "" FORCE)
+set(CMAKE_CXX_COMPILER "/usr/bin/clang++" CACHE STRING "" FORCE)
 
 add_subdirectory(external/raylib)
+add_subdirectory(external/flecs)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
-target_link_libraries(${PROJECT_NAME} raylib)
+file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)
+add_executable(${PROJECT_NAME} ${SRC_FILES})
+
+target_link_libraries(${PROJECT_NAME} raylib flecs)
+target_include_directories(${PROJECT_NAME} PRIVATE src)
+
+
