--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
+# Builds and caches
 /build
 /.cache
+/vcpkg_installed
+
+# CMake files
+/CMakeUserPresets.json
+
+# VS Code settings
+/.vscode/c_cpp_properties.json
