Simple mouse movement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 project(BixsBundleBash)
 
+set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_C_COMPILER "/usr/bin/clang" CACHE STRING "" FORCE)
 set(CMAKE_CXX_COMPILER "/usr/bin/clang++" CACHE STRING "" FORCE)
-
 
 find_package(flecs CONFIG REQUIRED)
 find_package(raylib CONFIG REQUIRED)
