--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,4 +32,9 @@ android {
             version '3.22.1'
         }
     }
+    sourceSets {
+        main {
+            assets.srcDirs = ['../../assets']
+        }
+    }
 }
